<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headingSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingSettings"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsName"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Name"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/layout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/labelAge"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Age"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsAge"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Age"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/layout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/labelHeight"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Height"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsHeight"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Height"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/layout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout3"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/labelWeight"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Weight"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsWeight"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Weight"
            android:inputType="number" />

    </LinearLayout>

    <!-- Fifth LinearLayout -->
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingStart="30px"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout4"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/labelStepsGoal"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Goal Steps"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsStepsGoal"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Steps Goal"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:onClick="saveChanges"
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout5" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>